--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,60 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: rgb(27, 158, 27);
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  height: 100vh;
+}
+
+.card {
+  display: flex;
+  height: 28rem;
+  width: 22rem;
+  background-color: white;
+  border-radius: 0.4rem;
+  border: darkgrey;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+
+.suitup {
+  position: relative;
+  top: 30px;
+  right: 135px;
+  font-size: 100px;
+
+  text-shadow: -2px 1px 9px black;
+  margin: 1rem;
+  align-content: flex-start;
+}
+
+.suitdown {
+  position: relative;
+  bottom: 30px;
+  left: 135px;
+  font-size: 100px;
+
+  text-shadow: -2px 1px 9px rgb(54, 41, 41);
+  margin: 1rem;
+  align-items: right;
+}
+
+.num {
+  font-size: 150px;
+  font-weight: bold;
+  text-shadow: -2px 1px 9px rgb(54, 41, 41);
+  align-items: center;
+}
+
+.color1 {
+  color: black;
+}
+
+.color2 {
+  color: red;
+}
