--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,301 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
-body {
-  background-color: rgb(27, 158, 27);
-  display: flex;
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: rgb(30, 141, 76);
+  }
+  .card {
+    background-color: white;
+    height: 14rem;
+    width: 10rem;
+    border-radius: 0.5rem;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
+    -webkit-box-reflect: below 1px
+      linear-gradient(transparent, transparent, #0004);
+    margin: 15px;
+  }
+  .card:hover {
+    height: 14rem;
+    width: 10rem;
+    background-image: linear-gradient(135deg, #d10707 25%, transparent 25%),
+      linear-gradient(225deg, #d10707 25%, transparent 25%),
+      linear-gradient(45deg, #d10707 25%, transparent 25%),
+      linear-gradient(315deg, #d10707 25%, white 25%);
+    background-position: 20px 0, 20px 0, 0 0, 0 0;
+    background-size: 20px 20px;
+    background-repeat: repeat;
+    border: solid white 10px;
+  }
+  .suitup {
+    font-size: 3rem;
+    align-self: flex-start;
+    padding-left: 1rem;
+    position: relative;
+    top: -15px;
+  }
+  .num {
+    font-size: 3rem;
+    align-self: center;
+    justify-content: center;
+    position: relative;
+  }
+  .suitdown {
+    font-size: 3rem;
+    align-self: flex-end;
+    justify-content: end;
+    transform: rotate(180deg);
+    padding-left: 1rem;
+    position: relative;
+    bottom: -15px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  body {
+    background-color: rgb(30, 141, 76);
+  }
+  .card {
+    background-color: white;
+    height: 14rem;
+    width: 10rem;
+    border-radius: 0.5rem;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
+    -webkit-box-reflect: below 1px
+      linear-gradient(transparent, transparent, #0004);
+    margin: 15px;
+  }
+  .card:hover {
+    height: 14rem;
+    width: 10rem;
+    background-image: linear-gradient(135deg, #d10707 25%, transparent 25%),
+      linear-gradient(225deg, #d10707 25%, transparent 25%),
+      linear-gradient(45deg, #d10707 25%, transparent 25%),
+      linear-gradient(315deg, #d10707 25%, white 25%);
+    background-position: 20px 0, 20px 0, 0 0, 0 0;
+    background-size: 20px 20px;
+    background-repeat: repeat;
+    border: solid white 10px;
+  }
+  .suitup {
+    font-size: 3rem;
+    align-self: flex-start;
+    padding-left: 1rem;
+    position: relative;
+    top: -15px;
+  }
+  .num {
+    font-size: 3rem;
+    align-self: center;
+    justify-content: center;
+    position: relative;
+  }
+  .suitdown {
+    font-size: 3rem;
+    align-self: flex-end;
+    justify-content: end;
+    transform: rotate(180deg);
+    padding-left: 1rem;
+    position: relative;
+    bottom: -15px;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  body {
+    background-image: url("https://images.pexels.com/photos/1479465/pexels-photo-1479465.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+  }
+  .card {
+    margin-top: 40px;
+    background-color: white;
+    height: 24rem;
+    width: 17rem;
+    border-radius: 0.5rem;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .card:hover {
+    height: 24rem;
+    width: 17rem;
+    background-image: linear-gradient(135deg, #d10707 25%, transparent 25%),
+      linear-gradient(225deg, #d10707 25%, transparent 25%),
+      linear-gradient(45deg, #d10707 25%, transparent 25%),
+      linear-gradient(315deg, #d10707 25%, white 25%);
+    background-position: 20px 0, 20px 0, 0 0, 0 0;
+    background-size: 20px 20px;
+    background-repeat: repeat;
+
+    border: solid white 15px;
+  }
+  .suitup {
+    font-size: 3rem;
+    align-self: flex-start;
+    padding-left: 1rem;
+    position: relative;
+    top: -15px;
+  }
+  .num {
+    font-size: 6rem;
+    align-self: center;
+    justify-content: center;
+    position: relative;
+  }
+  .suitdown {
+    font-size: 3rem;
+    align-self: flex-end;
+    justify-content: end;
+    transform: rotate(180deg);
+    padding-left: 1rem;
+    position: relative;
+    bottom: -15px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  body {
+    background-image: url("https://images.pexels.com/photos/1479465/pexels-photo-1479465.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+  }
+  .card {
+    margin-top: 40px;
+    background-color: white;
+    height: 24rem;
+    width: 17rem;
+    border-radius: 0.5rem;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .card:hover {
+    height: 24rem;
+    width: 17rem;
+    background-repeat: repeat;
+    background-image: linear-gradient(135deg, #d10707 25%, transparent 25%),
+      linear-gradient(225deg, #d10707 25%, transparent 25%),
+      linear-gradient(45deg, #d10707 25%, transparent 25%),
+      linear-gradient(315deg, #d10707 25%, white 25%);
+    background-position: 20px 0, 20px 0, 0 0, 0 0;
+    background-size: 20px 20px;
+    background-repeat: repeat;
+    border: solid white 15px;
+  }
+  .suitup {
+    font-size: 3rem;
+    align-self: flex-start;
+    padding-left: 1rem;
+    position: relative;
+    top: -15px;
+  }
+  .num {
+    font-size: 6rem;
+    align-self: center;
+    justify-content: center;
+    position: relative;
+  }
+  .suitdown {
+    font-size: 3rem;
+    align-self: flex-end;
+    justify-content: end;
+    transform: rotate(180deg);
+    padding-left: 1rem;
+    position: relative;
+    bottom: -15px;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  body {
+    background-image: url("https://images.pexels.com/photos/1479465/pexels-photo-1479465.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+  }
+  .card {
+    margin-top: 40px;
+    background-color: white;
+    height: 24rem;
+    width: 17rem;
+    border-radius: 0.5rem;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .cardback {
+    margin-top: 40px;
+    background-color: white;
+    height: 24rem;
+    width: 17rem;
+    border-radius: 0.5rem;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .cardback:hover {
+    height: 24rem;
+    width: 17rem;
+    background-image: linear-gradient(135deg, #d10707 25%, transparent 25%),
+      linear-gradient(225deg, #d10707 25%, transparent 25%),
+      linear-gradient(45deg, #d10707 25%, transparent 25%),
+      linear-gradient(315deg, #d10707 25%, white 25%);
+    background-position: 20px 0, 20px 0, 0 0, 0 0;
+    background-size: 20px 20px;
+    background-repeat: repeat;
+    border: solid white 15px;
+  }
+  .suitup {
+    font-size: 3rem;
+    align-self: flex-start;
+    padding-left: 1rem;
+    position: relative;
+    top: -15px;
+  }
+
+  .num {
+    font-size: 6rem;
+    align-self: center;
+    justify-content: center;
+    position: relative;
+  }
+
+  .suitdown {
+    font-size: 3rem;
+    align-self: flex-end;
+    justify-content: end;
+    transform: rotate(180deg);
+    padding-left: 1rem;
+    position: relative;
+    bottom: -15px;
+  }
+}
+/* body {
+  /* background-image: url("https://images.pexels.com/photos/1479465/pexels-photo-1479465.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");
+  /* background-color: rgb(27, 158, 27); */
+/* background-repeat: no-repeat; */
+
+/* display: flex;
   justify-content: center;
   align-content: center;
-  height: 100vh;
 }
 
 .card {
-  display: flex;
   height: 28rem;
   width: 22rem;
   background-color: white;
   border-radius: 0.4rem;
   border: darkgrey;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -27,7 +307,6 @@ body {
   top: 30px;
   right: 135px;
   font-size: 100px;
-
   text-shadow: -2px 1px 9px black;
   margin: 1rem;
   align-content: flex-start;
@@ -38,10 +317,10 @@ body {
   bottom: 30px;
   left: 135px;
   font-size: 100px;
-
+  transform: rotate(180deg);
   text-shadow: -2px 1px 9px rgb(54, 41, 41);
   margin: 1rem;
-  align-items: right;
+  align-items: flex-end;
 }
 
 .num {
@@ -49,6 +328,13 @@ body {
   font-weight: bold;
   text-shadow: -2px 1px 9px rgb(54, 41, 41);
   align-items: center;
+} */
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 
 .color1 {
